# 3DViewer

./: README.md
CPP4_3DView/src/: CMakeLists.txt  Doxyfile  Makefile
CPP4_3DView/src/commons/: s21_objects.hh  s21_observer.hh
CPP4_3DView/src/gui/: CMakeLists.txt  controller.hh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglimpl.cpp  openglimpl.h  s21_ProgramSettings.cpp  s21_ProgramSettings.hh
CPP4_3DView/src/gui/gifimage/: qgifimage.cpp
CPP4_3DView/src/model/: CMakeLists.txt  objParser.cpp  objParser.hh  s21_Facade.cpp  s21_Facade.hh  s21_WireframeModel.cpp  s21_WireframeModel.hh  s21_commands.hh
CPP4_3DView/src/tests/: CMakeLists.txt  s21_transform_tests.cpp  testParser.cpp
